[tool.poetry]
name = "wofost-calibration-dashboard"
version = "0.1.0"
description = ""
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
iterative-ensemble-smoother = "^0.4.0"
scikit-learn = "^1.7.2"
dash = "^2.16.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.2.3"
dash-daq = "^0.5.0"
plotly = "^5.23.0"
pcse = "^6.0.9"
joblib = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
